[package]
name = "urlcp"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.17"
reqwest = "0.11.14"
simple_logger = "4.0.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
